<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/twenty_dp"
        android:background="@color/colorWhite"
        android:padding="@dimen/five_dp">

        <com.webilize.vuzixfilemanager.utils.customviews.AppTextView
            android:id="@+id/txtHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/ten_dp"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/seventeen_sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:txt_font_type="bold" />

        <com.webilize.vuzixfilemanager.utils.customviews.AppTextView
            android:id="@+id/txtHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/three_dp"
            android:text="@string/long_press_on_folder_to_set_incoming_folder"
            android:textColor="@color/red"
            android:textSize="@dimen/thirteen_sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtHeading"
            app:txt_font_type="light" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:padding="@dimen/five_dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/linBottom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtHint" />

        <LinearLayout
            android:id="@+id/linBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.webilize.vuzixfilemanager.utils.customviews.AppTextView
                android:id="@+id/txtBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_card"
                android:drawableStart="@drawable/ic_back_black"
                android:drawablePadding="@dimen/seven_dp"
                android:gravity="center_vertical"
                android:padding="@dimen/ten_dp"
                android:text="@string/back"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fifteen_sp"
                app:txt_font_type="bold" />

            <com.webilize.vuzixfilemanager.utils.customviews.AppTextView
                android:id="@+id/txtCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_selected_card"
                android:gravity="center"
                android:padding="@dimen/twelve_dp"
                android:text="@string/cancel"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sixteen_sp"
                app:txt_font_type="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
